--- a/.config/i3/config
+++ b/.config/i3/config
@@ -23,7 +23,7 @@ font xft:JetBrainsMono Nerd Font 8
 # Start XDG autostart .desktop files using dex. See also
 # https://wiki.archlinux.org/index.php/XDG_Autostart
 exec --no-startup-id dex --autostart --environment i3
-
+#exec_always zsh /home/arp/.config/i3/lock.sh
 exec --no-staatup-id picom
 exec --no-startup-id /home/arp/.config/polybar/launch.sh --shapes
 
@@ -67,6 +67,7 @@ bindsym $mod+Shift+q kill
 #bindsym $mod+d exec --no-startup-id dmenu_run
 # A more modern dmenu replacement is rofi:
 bindcode $mod+40 exec "rofi -modi drun,run -show drun"
+bindsym $mod+Control+d exec "rofi modi drun,run -show run"
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
@@ -195,5 +196,23 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
-        status_command i3blocks
+	i3bar_command i3bar --transparency
+	status_command i3blocks
+	mode hide
+	bindsym button1 exec alacritty -e htop
+	bindsym button3 exec plasma-systemmonitor
+	font xft:JetBrainsMono Nerd Font 8
+	bindsym mod1+$mod+h mode hide 
+	bindsym mod1+$mod+n mode dock
+	colors {
+		background #00001a #00001a
+		inactive_workspace #00001a #000099 #00ffff
+		active_workspace #00001a #00ffff #00ffff
+		urgent_workspace #00001a #4ce600 #00ffff
+	}
 }
+for_window [class="^.*"] border pixel 0 
+gaps inner 8
+gaps outer 3
+smart_gaps on
+smart_gaps inverse_outer
