--- a/.config/mpd/mpd.conf
+++ b/.config/mpd/mpd.conf
@@ -226,29 +226,16 @@ input {
 #
 # An example of an ALSA output:
 #
-audio_output {
-	type		"alsa"
-	name		"My ALSA Device"
-	format "44100:16:2"
-	device		"hw:0,3"	# optional
-	mixer_type      "software"	# optional
-	mixer_device	"default"	# optional
-	mixer_control	"PCM"		# optional
-	mixer_index	"0"		# optional
-}
-audio_output {
-        type            "alsa"
-        name            "ALSA Bluetooth Headset"
-        device          "bluealsa"
-        mixer_type    "software"
-}
-
-audio_output {
-        type            "alsa"
-        name            "ALSA Bluetooth Headset2"
-        device          "bluealsa2"
-        mixer_type    "software"
-}
+#audio_output {
+#	type		"alsa"
+#	name		"My ALSA Device"
+#	format "44100:16:2"
+#	device		"hw:0,3"	# optional
+#	mixer_type      "software"	# optional
+#	mixer_device	"default"	# optional
+#	mixer_control	"PCM"		# optional
+#	mixer_index	"0"		# optional
+#}
 
 #
 # An example of an OSS output:
